AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-business-rules-services/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-business-rules
spec:
  host: sas-business-rules
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /businessRules/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-reference-data
spec:
  host: sas-reference-data
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /referenceData/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-business-rules-services
    sas.com/admin: namespace
  name: sas-business-rules
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /businessRules
    - uri:
        prefix: /businessRules/
    route:
    - destination:
        host: sas-business-rules
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-business-rules-services
    sas.com/admin: namespace
  name: sas-reference-data
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /referenceData
    - uri:
        prefix: /referenceData/
    route:
    - destination:
        host: sas-reference-data
    timeout: 300s
